add rus and merge chat api

--- a/DefaultMessager/Views/Account/EditDescription.cshtml
+++ b/DefaultMessager/Views/Account/EditDescription.cshtml
@@ -3,36 +3,36 @@
 <div class="modal-dialog modal-xl">
     <div class="modal-content bg-dark">
         <div class="modal-header">
-            <h5 class="modal-title text-white" id="staticBackdropLabel">Profile editing</h5>
+            <h5 class="modal-title text-white" id="staticBackdropLabel">Изменение профиля</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <form method="post" asp-controller="Account" asp-action="EditDescription" asp-route-id="@Model.Id">
                 <div class="mb-3">
-                    <label asp-for="@Model.Surname" class="form-label text-white">Surname</label>
+                    <label asp-for="@Model.Surname" class="form-label text-white">Фамилия</label>
                     <input asp-for="@Model.Surname" value="@Model.Surname" type="text" class="form-control bg-secondary text-white" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
-                    <label asp-for="@Model.Name" class="form-label text-white">Name</label>
+                    <label asp-for="@Model.Name" class="form-label text-white">Имя</label>
                     <input asp-for="@Model.Name" value="@Model.Name" type="text" class="form-control bg-secondary text-white">
                 </div>
                 <div class="mb-3">
-                    <label asp-for="@Model.Patronymic" class="form-label text-white">Patronymic</label>
+                    <label asp-for="@Model.Patronymic" class="form-label text-white">Отчество</label>
                     <input asp-for="@Model.Patronymic" value="@Model.Patronymic" type="text" class="form-control bg-secondary text-white">
                 </div>
                 <div class="mb-3">
-                    <label asp-for="@Model.Birthday" class="form-label text-white">Birthday</label>
+                    <label asp-for="@Model.Birthday" class="form-label text-white">День рождения</label>
                     <input asp-for="@Model.Birthday" value="@Model.Birthday.Value.ToString("yyyy-MM-dd")" type="date" class="form-control bg-secondary text-white">
                 </div>
                 <div class="mb-3">
-                    <label    asp-for="@Model.Describe" class="form-label text-white">Describe</label>
+                    <label    asp-for="@Model.Describe" class="form-label text-white">Описание</label>
                     <textarea asp-for="@Model.Describe" value="@Model.Describe" class="form-control bg-secondary text-white" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="@Model.AccountStatus" class="form-label text-white">Account Status</label>
+                    <label asp-for="@Model.AccountStatus" class="form-label text-white">Статус</label>
                     <input asp-for="@Model.AccountStatus" value="@Model.AccountStatus" type="text" class="form-control bg-secondary text-white">
                 </div>
-                <button type="submit" class="btn btn-outline-secondary text-white">Save changes</button>
+                <button type="submit" class="btn btn-outline-secondary text-white">Сохранить изменения</button>
             </form>
         </div>
     </div>
