--- a/DefaultMessager/Views/Account/LogIn.cshtml
+++ b/DefaultMessager/Views/Account/LogIn.cshtml
@@ -12,33 +12,33 @@
 						<div class="row justify-content-center">
 							<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-								<p class="text-center h1 fw-bold mb-3 mt-4 text-white">Log in</p>
+								<p class="text-center h1 fw-bold mb-3 mt-4 text-white">Авторизация</p>
 
 								<form class="mx-0" method="post" asp-controller="Account" asp-action="LogIn">
 									<div asp-validation-summary="All" style="color:aliceblue"></div>
 									<div class="d-flex flex-row align-items-center mb-4">
 										<div class="form-outline flex-fill mb-0">
-											<label class="form-label text-white" asp-for="Login">Login</label>
+											<label class="form-label text-white" asp-for="Login">Логин</label>
 											<input asp-for="Login" placeholder="Login" type="text" class="form-control" />
 										</div>
 									</div>
 
 									<div class="d-flex flex-row align-items-center mb-4">
 										<div class="form-outline flex-fill mb-0">
-											<label class="form-label text-white" asp-for="Password">Password</label>
+											<label class="form-label text-white" asp-for="Password">Пароль</label>
 											<input asp-for="Password" placeholder="Password" type="password" class="form-control" />
 										</div>
 									</div>
 
 									<div class="d-flex justify-content-center mx-4 mb-1 mb-lg-4">
-										<button type="submit" class="btn btn-secondary btn-lg">Login</button>
+										<button type="submit" class="btn btn-secondary btn-lg">Войти</button>
 									</div>
 
 									<div class="">
 										<p class="text-center text-white mt-3 mb-0">
-											Don't have an account yet?
+											У вас еще нет учетной записи?
 											<br>
-											<a asp-controller="Account" asp-action="Registration" class="fw-bold text-secondary"><u>Register here</u></a>
+											<a asp-controller="Account" asp-action="Registration" class="fw-bold text-secondary"><u>Зарегистрируйтесь здесь</u></a>
 										</p>
 									</div>
 								</form>
