--- a/DefaultMessager/Views/Chatting/Index.cshtml
+++ b/DefaultMessager/Views/Chatting/Index.cshtml
@@ -40,7 +40,7 @@
                         <input onkeydown="sndBtnClk('sndMessBtn')" id="messageField" type="text" class="form-control" placeholder="" style="display: inline-block; width: 65%;" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button id="sndMessBtn" type="button" class="btn btn-outline-dark text-white ms-3 mt-0" data-mdb-ripple-color="dark"
                                 style="z-index: 1;" onclick="CreateMessage({url:'/Message/SendMessage'});">
-                            Send a message
+                            отправить
                         </button>
                     </div>
                 </div>
