--- a/DefaultMessager/Views/Post/FullPost.cshtml
+++ b/DefaultMessager/Views/Post/FullPost.cshtml
@@ -40,7 +40,7 @@
                         <input onkeydown="sndBtnClk('sndCommBtn')" id="commentField" type="text" class="form-control mb-2 mt-3" placeholder="Add a comment" style="display: inline-block; width: 65%;">
                         <button id="sndCommBtn" type="button" class="btn btn-outline-dark text-white ms-3 mt-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-mdb-ripple-color="dark"
                                 style="z-index: 1;" onclick="CreateCommentOnPost({url:'/Comment/SendComment',data:'@Model.Id'});">
-                            Add a comment
+                            Комментировать
                         </button>
                     </div>
                 </div>
