--- a/DefaultMessager/Views/Account/Registration.cshtml
+++ b/DefaultMessager/Views/Account/Registration.cshtml
@@ -10,48 +10,48 @@
                         <div class="row justify-content-center">
                             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                <p class="text-center h1 fw-bold mb-5 mt-4 text-white">Registartion</p>
+                                <p class="text-center h1 fw-bold mb-5 mt-4 text-white">Регистрация</p>
 
                                 <form class="mx-0" method="post" asp-controller="Account" asp-action="Registration">
                                     <div asp-validation-summary="All" style="color:aliceblue"></div>
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <div class="form-outline flex-fill mb-0">
-                                            <label class="form-label text-white" asp-for="Login">Login</label>
+                                            <label class="form-label text-white" asp-for="Login">Логин</label>
                                             <input asp-for="Login" placeholder="login" type="text" class="form-control" />
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <div class="form-outline flex-fill mb-0">
-                                            <label class="form-label text-white" asp-for="Email">Email</label>
+                                            <label class="form-label text-white" asp-for="Email">Почта</label>
                                             <input asp-for="Email" placeholder="email" type="email" class="form-control" />
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <div class="form-outline flex-fill mb-0">
-                                            <label class="form-label text-white" asp-for="Password">Password</label>
+                                            <label class="form-label text-white" asp-for="Password">Пароль</label>
                                             <input asp-for="Password" placeholder="Password" class="form-control" />
                                         </div>
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <div class="form-outline flex-fill mb-0">
-                                            <label class="form-label text-white" asp-for="PasswordConfirm">Confirm password</label>
+                                            <label class="form-label text-white" asp-for="PasswordConfirm">Повторите пароль</label>
                                             <input asp-for="PasswordConfirm"  placeholder="Repit password" class="form-control" />
 
                                         </div>
                                     </div>
 
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                        <button type="submit" class="btn btn-secondary btn-lg">Register</button>
+                                        <button type="submit" class="btn btn-secondary btn-lg">Регистрация</button>
                                     </div>
 
                                     <div class="">
                                         <p class="text-center text-white mt-5 mb-0">
-                                            Have already an account?
+                                            Уже есть аккаунт?
                                             <br>
-                                            <a asp-controller="Account" asp-action="logIn" class="fw-bold text-secondary"><u>Login here</u></a>
+                                            <a asp-controller="Account" asp-action="logIn" class="fw-bold text-secondary"><u>Войди здесь</u></a>
                                         </p>
                                     </div>
                                 </form>
