--- a/DefaultMessager/Views/ImageAlbum/_createImageAlbum.cshtml
+++ b/DefaultMessager/Views/ImageAlbum/_createImageAlbum.cshtml
@@ -3,17 +3,17 @@
 <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content bg-dark">
         <div class="modal-header">
-        <h5 class="modal-title text-white" id="staticBackdropLabel">Album create</h5>
+        <h5 class="modal-title text-white" id="staticBackdropLabel">Создай альбом</h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <form method="post" asp-action="CreateImageAlbum" asp-controller="ImageAlbum">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label text-white">Title</label>
+                <label for="exampleInputEmail1" class="form-label text-white">Заголовок</label>
                 <input asp-for="Title" type="text" class="form-control bg-secondary text-white" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="d-flex justify-content-end mb-1">
-                <button type="submit" class="btn btn-outline-secondary text-white">Add new album</button>
+                <button type="submit" class="btn btn-outline-secondary text-white">Новый альбом</button>
             </div>
         </form>
         </div>
