--- a/DefaultMessager/Views/Post/_createPost.cshtml
+++ b/DefaultMessager/Views/Post/_createPost.cshtml
@@ -4,27 +4,27 @@
 <div class="modal-dialog modal-xl">
     <div class="modal-content bg-dark">
         <div class="modal-header">
-            <h5 class="modal-title text-white" id="staticBackdropLabel">Post create</h5>
+            <h5 class="modal-title text-white" id="staticBackdropLabel">Создай пост</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
                 <form name="inputPost" enctype="multipart/form-data" method="post" asp-action="CreatePost" asp-controller="Post" >
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label text-white">Title</label>
+                    <label for="exampleInputEmail1" class="form-label text-white">Заголовок</label>
                     <input type="text" asp-for="Title" class="form-control bg-secondary text-white" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="d-flex justify-content-center">
                     <img src="" alt="">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label text-white">Describe</label>
+                    <label for="exampleInputPassword1" class="form-label text-white">Описание</label>
                     <textarea asp-for="PostTextContent" class="form-control bg-secondary text-white" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="formFile" class="form-label text-white">Choose photo</label>
+                    <label for="formFile" class="form-label text-white">Выбрать фото</label>
                     <input asp-for="FormFiles" class="form-control bg-secondary text-white" type="file" id="inputField">
                 </div>
-                <button type="submit" class="btn btn-outline-secondary text-white">Add</button>
+                <button type="submit" class="btn btn-outline-secondary text-white">Публикация</button>
             </form>
         </div>
     </div>
