--- a/DefaultMessager/Views/Chatting/_accountChatList.cshtml
+++ b/DefaultMessager/Views/Chatting/_accountChatList.cshtml
@@ -1,6 +1,6 @@
 ﻿@using DefaultMessager.Domain.ViewModel.AccountModel;
 @model IEnumerable<AccountIconViewModel>
-@if (@Model.FirstOrDefault().Id!=null)
+@if (Model.Count()!=0 && Model.FirstOrDefault().Id!=null)
 {
     <script>GetRelationId({ companionId: '@Model.FirstOrDefault().Id' });</script>
 }
